# hive-protocol

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pixi.toml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish-docs.yml
demos/: README.md  demo_hypothesis.py  demo_pydantic.py  messy_code.py
docs/: LEARNING_PATH.md  TUTORIAL.md  WORKSHOP_GUIDE.md  _quarto.yml  custom.scss  index.html  narration.md  results.html  slides.qmd
docs/_site/: index.html  search.json  slides.html
notebooks/: .gitignore  01_introduction.qmd  02_kalman_filter.qmd  03_diagnostics.qmd  _quarto.yml
notebooks/docs/: search.json
notebooks/docs/site_libs/bootstrap/: bootstrap-45650c87aca9f3a6990db55f9c195f0b.min.css
src/hive_protocol/: __init__.py  _version.py
src/hive_protocol/data/: __init__.py  simulate.py
src/hive_protocol/inference/: __init__.py  diagnostics.py  kalman.py
tests/: conftest.py  test_diagnostics.py  test_kalman.py  test_simulate.py
workflow/: Snakefile
workflow/config/: params.yaml
